# rs-embl

./: Cargo.toml  README.md
examples/: vep.rs
src/: api.rs  descriptors.rs  lib.rs  main.rs  sequence.rs  transcript.rs  vep.rs
