[package]
name = "rs-embl"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["serde_derive"] }
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }
