[package]
name = "rs-embl"
version = "0.2.34"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
json = "0.12.4"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0.104"
thiserror = "1.0.48"
regex = "1.10.3"
itertools = "0.12.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.30.0", features = ["rt-multi-thread", "sync", "macros"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0"
web-sys = { version = "0.3.65", features = ["console"] }
tokio = { version = "1.30.0", features = ["macros", "sync", "time", "rt"] }
ehttp = "0"
